Fix column overflow

--- a/src/styles/Columns.pcss
+++ b/src/styles/Columns.pcss
@@ -63,6 +63,13 @@
       display: flex;
       flex-direction: column;
       overflow: visible;
+
+      & .ColumnList {
+        position: relative;
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+      }
     }
 
     & .toggleColumn {
